force-app/main/default/objects/AgentSession__c/AgentSession__c.object-meta.xml
<CustomObject>
    <label>Agent Session</label>
    <nameField>
        <displayFormat>AS-{0000000}</displayFormat>
        <label>Agent Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>