force-app/main/default/objects/AgentSession__c/fields/SessionId__c.field-meta.xml
<CustomField>
    <fullName>SessionId__c</fullName>
    <externalId>true</externalId>
    <label>Session Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>