force-app/main/default/objects/AgentSession__c/fields/StopRequested__c.field-meta.xml
<CustomField>
    <fullName>StopRequested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Requested</label>
    <type>Checkbox</type>
</CustomField>